update bai tap cuoi ky

--- a/CASESTUDY/style1.css
+++ b/CASESTUDY/style1.css
@@ -1,16 +1,52 @@
-/* #top {
+body {
+    font-family: Arial;
+    font-size: 14.5px;
+    width: 1000px;
+    margin: 0px auto;
+}
+
+#top {
+    width: 1000px;
     background: powderblue;
     height: 100px;
+    float: none;
     font-style:calc() 
 }
+/* 
+.input-box{
+    margin-bottom: 1px;  
+}
+.input-box input{
+    padding: 7.5px 15px;
+    width: 15%;
+    border: 1px solid #cccccc;
+    outline: none;
+    float: right;
+   
+}
+*/
+.btn-box{
+    text-align: right;
+    margin-top: 2px;
+}
+.btn-box button{
+    padding: 7.5px 15px;
+    border-radius: 2px;
+    background-color: #009999;
+    color: #ffffff;
+    border: none;
+    outline: none;
+}
+
 #banner {
     background: pink;
     height: 280px;
     width: 1000px;
 }
+
 #main {
     width: 1000px;
     background: powderblue;
-    float: right;
+    float: none;
     min-height: 600px;
-} */
+}
