--- a/CASESTUDY/style.css
+++ b/CASESTUDY/style.css
@@ -23,7 +23,7 @@ body {
    
 }
 .btn-box{
-    text-align: right;
+    text-align: center;
     margin-top: 2px;
     
 }
@@ -34,6 +34,7 @@ body {
     color: #ffffff;
     border: none;
     outline: none;
+    float: right;
 
 }    
 #banner {
